feat: nodes api
