# src/routes.ts
@@ -20,7 +20,9 @@ router.post('/projects/delete', errorWrapper(ProjectRouter.deleteProject))
 router.get('/projects/:projectId', errorWrapper(ProjectRouter.get))
 router.get('/projects', errorWrapper(ProjectRouter.list))
 
-router.get('/nodes/:nodeId/info', NodeRouter.getInfo)
-router.post('/nodes/:nodeId/reset', NodeRouter.reset)
+router.get('/nodes/:nodeId', errorWrapper(NodeRouter.get))
+router.get('/nodes', errorWrapper(NodeRouter.list))
+router.post('/nodes/reset', errorWrapper(NodeRouter.reset))
+router.post('/nodes/delete', errorWrapper(NodeRouter.deleteNode))
 
 export default router
